-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.358 2008-12-06 02:40:09 guru Exp $
-----------------------------------------------------------------------------------------
2008-12-05	pwessel
	* greenspline.c:	New interpolation/gridding program for 1-3 dimensions using
				Green's functions for various splines.  Added new example 29.

2008-12-03	remko
	* PSL_prologue.ps:	Redefined code for circle. Needed a stroke (S) first, otherwise
				a line would be drawn from the previous symbol.
	* pslib.c:		Updated PSL_prologue.ps version.

2008-11-29	pwessel
	* minmax.c:		Optional /<col> may be added to -T<dz> to select a column.
	
2008-11-28	pwessel
	* gmt_init.c:		Now, -R may take the name of an existing grid file. Then,
				the grid domain is used to set -R as well as the grid
				increment for those program that has such an option.

2008-11-21	pwessel
	* spotter/backtracker.c:	The -W option always assumed the reverse rotation,
				i.e. from hotspot to seamount.  Now obeys the -D option.

2008-11-17	pwessel
	* psscale.c:		When -I and -Li was used we did not draw box outlines.
	* ps2raster.c:		New format -Tb for MicroSoft BMP output.  Also, formats
				b, g, j, and t accept modifier '-' to produce grayscale
				images.  Finally, added -Cgs-command to add one or more
				custom switches to ghostscript, and -Q[g|t]<bits> to
				set the level of anti-aliasing for graphics and text.

2008-11-14	pwessel
	* ps2raster.c:		New format -TG turns on transparency for PNG output.
	
2008-11-13	pwessel
	* psxy[z].c:		New option -I<intens> to modulate fill color via illumination.

2008-11-02	pwessel
	* spotter/backtracker.c:	New option -e to specify a single fixed total
				reconstruction rotation to apply to all input points.
				
2008-10-17	pwessel
	* xyz2grd.c:		New format (A) for -Z which allows more than one floating
				point value per input record.  Cannot be used if the z-